--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -389,7 +389,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>Alexmtt.ribeiro@gmail.com</p>
+                <p>alexmtt.ribeiro@gmail.com</p>
               </div>
 
               <div class="phone">
