Alterando dados de formacao

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Alex Ribeiro</h1>
-      <p>Especialista em <span class="typed" data-typed-items="HTML, CSS, JavaScript, Pyhton"></span></p>
+      <p>Especialista em <span class="typed" data-typed-items="Java, Spring Boot, Banco de Dados, Pyhton"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -94,7 +94,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Desenvolvedor Web &amp; Analista de Dados.</h3>
+            <h3>Desenvolvedor Back-End &amp; Analista de Dados.</h3>
             <p class="fst-italic">
               Lembre sempre que a sua vontade de triunfar é mais importante do que qualquer outra coisa.
             </p>
@@ -102,22 +102,27 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Aniversário:</strong> <span>19 Jun 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.Alexribeiro.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>https://github.com/alocss</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 71 98156-8938</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Salvador/BA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>25</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Sernioridade:</strong> <span>Junior</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Alexmtt.ribeiro@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Alexribeiro.dev@outlook.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Tenho experiência em áreas administrativas e logísticas tendo trabalhado em empresas como Ype Industria e Comercio de Produtos Químicos LTDA e Terminal Portuário Cotegipe S.A. Participando de desenvolvimento de ferramentas de gestão e utilização de sistemas como Total Productive Maintenance (TPM). Conclui cursos de Marketing Digital, Marketing direcionado para Instagram, While 2021 realizado pela Rocketseat sobre Ecossistemas de Tecnologia e Minicurso de Lógica de Programação com JavaScript. Concluiu também o BootCamp Santander - Ciência de Dados com Python.
+              Desenvolvedor de sistemas com experiência em projetos utilizando Java com Spring Boot, aplicando metodologias ágeis.
+Atuação com bancos de dados relacionais e não relacionais, como PostgreSQL e MongoDB, além de testes de APIs REST
+com Postman e Swagger. Familiaridade com ferramentas como Git e Docker. Desenvolvi um portfólio pessoal utilizando
+Bootstrap, HTML, CSS e JavaScript. Busco uma nova oportunidade como desenvolvedor em ambiente corporativo, com o
+objetivo de continuar meu desenvolvimento profissional e contribuir com soluções tecnológicas de forma proativa e
+colaborativa.
             </p>
           </div>
         </div>
@@ -132,7 +137,9 @@
         <div class="section-title">
           <h2>Habilidades</h2>
           <p>
-            Com base na faculdade em Análise e Desenvolvimento de Sistemas, estou aprimorando minhas habilidades em HTML, CSS, JavaScript, Bootstrap e React. Além disso, estou me aprofundando em Experiência do Usuário (UX) para criar interfaces mais intuitivas e eficientes. Participei de bootcamps de Análise de Dados com Python e Desenvolvimento Web, ampliando minha experiência em áreas complementares. Estou comprometido em continuar aprendendo e buscando oportunidades para aplicar meus conhecimentos de forma prática e inovadora.
+            Tenho me especializado em desenvolvimento backend por meio de cursos focados em Java, Spring Boot, bancos de dados, Docker, Postman, Swagger e metodologias ágeis. Paralelamente à minha graduação em Análise e Desenvolvimento de Sistemas, venho ampliando minhas habilidades em frontend, com conhecimentos em HTML, CSS, Bootstrap, Angular e JavaScript, buscando uma formação completa e alinhada às demandas do mercado.
+
+            Além disso, tenho me aprofundado em ciência de dados, com foco em Python, análise de dados e Power BI. Estou sempre em busca de novos desafios e oportunidades para aplicar meus conhecimentos e contribuir para projetos inovadores.
 
           </p>
         </div>
@@ -142,23 +149,23 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">CSS <i class="val">80%</i></span>
+              <span class="skill">Java <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">Spring Boot <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Banco de Dados <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -167,23 +174,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">90%</i></span>
+              <span class="skill">Python <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill"> Analise de Dados <i class="val">90%</i></span>
+              <span class="skill"> Analise de Dados <i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill"> Metodologias ágeis <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Power BI <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -230,15 +237,12 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Experiência profissional</h3>
             <div class="resume-item">
-              <h4>Operações Portuárias</h4>
-              <h5>2022 - Presente</h5>
-              <p><em>Salvador, Base Naval, BA </em></p>
+              <h4>Desenvolvimento Back-End com Java</h4>
+              <h5>2025</h5>
+              <p><em>Javanauta </em></p>
               <ul>
-                <li> Preparo de relatórios diários e periódicos com planilhas dinâmicas para análise logística.</li>
-                <li> recepção, conferência e arquivamento de notas fiscais para operações de importação/exportação.</li>
-                <li> Comunicação eficaz entre empresas e veículos, coordenando operações logísticas.</li>
+                <p>O curso aborda o desenvolvimento de aplicações utilizando Java, Spring Boot e suas principais dependências, além de metodologias ágeis, bancos de dados, Postman, Swagger e Docker. O conteúdo oferece uma visão corporativa do desenvolvimento de software, com foco na criação de códigos bem estruturados e limpos. O objetivo é proporcionar uma experiência prática e aproximada da rotina de um desenvolvedor no dia a dia.</p>
               </ul>
             </div>
             <div class="resume-item">
