Foi adicionado a aba de cursos e certificados

--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -225,18 +225,13 @@ colaborativa.
             <h3 class="resume-title">Formação</h3>
             <div class="resume-item">
               <h4>Analise e  Desenvolvimento de Sistemas</h4>
-              <h5>2023 - 2026</h5>
-              <p><em>Faculdade Descomplica</em></p>
+              <h5>2024 - 2027</h5>
+              <p><em>Faculdade Estacio</em></p>
               <p>Atualmente, estou cursando Análise e Desenvolvimento de Sistemas com o objetivo de aprimorar minhas habilidades e adquirir experiência na área. Minha paixão pela tecnologia me impulsionou a buscar conhecimento em diversas disciplinas, incluindo desenvolvimento de software, ciência de dados e análise de sistemas.</p>
-            </div>
-            <div class="resume-item">
-              <h4>BootCamp: Analise de Dados &amp; Desenvolvimento WEB</h4>
-              <h5>2023 - 2024</h5>
-              <p><em>ACademia PME educação: D.I.O</em></p>
-              <p>Participei do bootcamp de Análise de Dados com Python do Banco Santander, em parceria com a DIO, onde adquiri habilidades em desenvolvimento web com Python e ferramentas como PowerBI, ETL, MongoDB e MySQL. No bootcamp de Desenvolvimento Web, aprofundei meus conhecimentos em JavaScript, Bootstrap, React, Python e Django. Essas experiências me proporcionaram uma base sólida em tecnologias relevantes para o mercado atual.</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Cursos e Certificados</h3>
             <div class="resume-item">
               <h4>Desenvolvimento Back-End com Java</h4>
               <h5>2025</h5>
@@ -246,13 +241,10 @@ colaborativa.
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Auxiliar Administrativo</h4>
-              <h5>2017 - 2019</h5>
-              <p><em>Salvador, BA</em></p>
-              <ul>
-                <li>Trabalhei na área de GMC - Gestão de Melhoria Contínua, cujo objetivo é resolver problemas de forma rápida, descentralizando a execução das soluções para as falhas detectadas. Essa abordagem permite uma gestão participativa, estimulando a produção de sugestões e valorizando todos os envolvidos.</li>
-                <li>Tive contato direto com TPM - Total Productive Maintenance, um sistema desenvolvido no Japão com o objetivo de eliminar perdas, reduzir paradas, garantir a qualidade e diminuir custos em empresas com processos contínuos. Além disso, utilizei ferramentas como 5S e Ciclo PDCA para aprimorar os processos e promover a eficiência operacional.</li>
-              </ul>
+              <h4>BootCamp: Analise de Dados &amp; Desenvolvimento WEB</h4>
+              <h5>2023 - 2024</h5>
+              <p><em>ACademia PME educação: D.I.O</em></p>
+              <p>Participei do bootcamp de Análise de Dados com Python do Banco Santander, em parceria com a DIO, onde adquiri habilidades em desenvolvimento web com Python e ferramentas como PowerBI, ETL, MongoDB e MySQL. No bootcamp de Desenvolvimento Web, aprofundei meus conhecimentos em JavaScript, Bootstrap, React, Python e Django. Essas experiências me proporcionaram uma base sólida em tecnologias relevantes para o mercado atual.</p>
             </div>
           </div>
         </div>
@@ -326,6 +318,84 @@ colaborativa.
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Certificados Section ======= -->
+    <section id="certificado" class="certificado section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Certificados</h2>
+          <p>Ao longo da minha formação, concluí diversos certificados com o objetivo de aprimorar habilidades e adquirir novos conhecimentos.</p>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="certificado-flters">
+              <li data-filter="*" class="filter-active">Main</li>
+              <li data-filter=".filter-backEnd">Back-end</li>
+              <li data-filter=".filter-bancoDeDados">Banco de Dados</li>
+              <li data-filter=".filter-others">others</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row certificado-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 certificado-item filter-backEnd">
+            <div class="certificados-backEnd">
+              <img src="assets/img/certificados/Back/Java e/Java.PNG" class="img-fluid" alt="">
+              <div class="certificados-links">
+                <a href="assets/img/certificados/Back/Java e/Java.PNG" data-gallery="certificadoGallery" class="certificado-lightbox" title="Java"><i class="bx bx-plus"></i></a>  
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 certificado-item filter-backEnd">
+            <div class="certificados-backEnd">
+              <img src="assets/img/certificados/Back/Python/BootCamp.PNG" class="img-fluid" alt="">
+              <div class="certificados-links">
+                <a href="assets/img/certificados/Back/Python/BootCamp.PNG" data-gallery="certificadoGallery" class="certificado-lightbox" title="Java"><i class="bx bx-plus"></i></a>  
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 certificado-item filter-others">
+            <div class="certificados-Main">
+              <img src="assets/img/certificados/Front/Desenvolvimento Colaborativo.PNG" class="img-fluid" alt="">
+              <div class="certificados-links">
+                <a href="assets/img/certificados/Front/Desenvolvimento Colaborativo.PNG" data-gallery="certificadoGallery" class="certificado-lightbox" title="Java"><i class="bx bx-plus"></i></a>  
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 certificado-item filter-bancoDeDados">
+            <div class="certificados-Main">
+              <img src="assets/img/certificados/BD/Fundamentos AWS.PNG" class="img-fluid" alt="">
+              <div class="certificados-links">
+                <a href="assets/img/certificados/BD/Fundamentos AWS.PNG" data-gallery="certificadoGallery" class="certificado-lightbox" title="Java"><i class="bx bx-plus"></i></a>  
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 certificado-item filter-others">
+            <div class="certificados-Main">
+              <img src="assets/img/certificados/BD/PowerBI.PNG" class="img-fluid" alt="">
+              <div class="certificados-links">
+                <a href="assets/img/certificados/BD/PowerBI.PNG" data-gallery="certificadoGallery" class="certificado-lightbox" title="Java"><i class="bx bx-plus"></i></a>  
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 certificado-item filter-bancoDeDados">
+            <div class="certificados-Main">
+              <img src="assets/img/certificados/BD/Banco de Dados.PNG" class="img-fluid" alt="">
+              <div class="certificados-links">
+                <a href="assets/img/certificados/BD/Banco de Dados.PNG" data-gallery="certificadoGallery" class="certificado-lightbox" title="Java"><i class="bx bx-plus"></i></a>  
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+      </div>
+    </section><!-- End certificado Section -->
 
     <!-- ======= Services Section ======= 
     <section id="services" class="services section-bg">
