--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -63,8 +63,8 @@
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Currículo</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projetos</span></a></li>
-          <!--<li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>-->
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Conato</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Certificados</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contato</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -211,17 +211,6 @@ colaborativa.
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumário</h3>
-            <div class="resume-item pb-0">
-              <h4>Alex Ribeiro</h4>
-              <p><em>Minha expertise em Python e Django me permite criar aplicativos robustos e escaláveis, enquanto minha compreensão da ciência de dados me capacita a extrair insights valiosos de conjuntos de dados complexos.E para aprimorar ainda mais minhas habilidades front-end, domino JavaScript, permitindo-me criar interfaces de usuário interativas e dinâmicas. </em></p>
-              <ul>
-                <li>Salvador, BA</li>
-                <li>(71) 98156 - 8938</li>
-                <li>alexmtt.ribeio@gmail.com</li>
-              </ul>
-            </div>
-
             <h3 class="resume-title">Formação</h3>
             <div class="resume-item">
               <h4>Analise e  Desenvolvimento de Sistemas</h4>
@@ -231,7 +220,7 @@ colaborativa.
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Cursos e Certificados</h3>
+            <h3 class="resume-title">Cursos</h3>
             <div class="resume-item">
               <h4>Desenvolvimento Back-End com Java</h4>
               <h5>2025</h5>
